--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,127 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
-    <!--Layout for the Map-->
+    android:id="@+id/sliding_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="bottom"
+    sothree:umanoPanelHeight="68dp"
+    sothree:umanoShadowHeight="4dp">
+    <!--Toolbar-->
+
+
+
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="0.5">
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.vodafone.paulabohorquez.geomessaging.MainActivity" />
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryDark">
+        <include
+            android:id="@+id/tool_bar"
+            layout="@layout/tool_bar"
+            ></include>
+
+
+        <!--Layout for the buttons-->
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="2"
+
+            android:background="@color/colorPrimaryDark">
+            <Button
+                android:id="@+id/startButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".50"
+                android:drawableTop="@drawable/check"
+
+
+                android:text="Connect"
+                android:theme="@style/AppTheme.ButtonStart" />
+            <Button
+                android:id="@+id/stopButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".50"
+                android:drawableTop="@drawable/close"
+                android:text="Disconnect"
+                android:theme="@style/AppTheme.ButtonStop" />
+            <Button
+                android:id="@+id/accidentButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".50"
+                android:drawableTop="@drawable/error"
+                android:text="Accident"
+                android:theme="@style/AppTheme.ButtonInform" />
+        </LinearLayout>
+
+        <!--Layout for the Map-->
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.5">
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.vodafone.paulabohorquez.geomessaging.MainActivity" />
+        </LinearLayout>
+
+
+
+
     </LinearLayout>
 
-    <!--Layout for the buttons-->
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="2"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimary">
-        <Button
-            android:id="@+id/startButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".50"
-
-            android:paddingTop="10dp"
-            android:text="Start"
-            android:theme="@style/AppTheme.ButtonStart" />
-        <Button
-            android:id="@+id/stopButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".50"
-            android:paddingTop="10dp"
-            android:text="Stop"
-            android:theme="@style/AppTheme.ButtonStop" />
-        <Button
-            android:id="@+id/accidentButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".50"
-            android:paddingTop="10dp"
-            android:text="Accident"
-            android:theme="@style/AppTheme.ButtonInform" />
-    </LinearLayout>
     <!--Layout for the list of messages-->
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:background="@drawable/paper">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+
+            android:background="@color/whitePaper">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="Messages"
+                android:textAppearance="@color/common_google_signin_btn_text_dark"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:typeface="sans"/>
+
+            <ImageView
+                android:id="@+id/follow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/message"
+                android:layout_marginRight="15dp"
+                android:layout_gravity="center_vertical"
+
+
+               />
+
+        </LinearLayout>
+
         <ListView
             android:id="@+id/listView"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"/>
     </LinearLayout>
-
-</LinearLayout>
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
