--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#e60000</color>
+    <color name="colorPrimaryDark">#B80000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000</color>
     <color name="blue">#00f</color>
@@ -15,5 +15,6 @@
     <color name="mediumBrown">#795548</color>
     <color name="lightBrown">#A1887F</color>
     <color name="white">#FFFFFF</color>
-    <color name="lightGreen">#9CCC65</color>
+    <color name="whitePaper">#f9f9f4</color>
+    <color name="lightGreen">#a8b400</color>
 </resources>
