Number of sendings separated from time to fade in accident

--- a/app/src/main/res/layout/dialog_ttl.xml
+++ b/app/src/main/res/layout/dialog_ttl.xml
@@ -32,7 +32,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberSigned"
-        android:hint="Insert time to live"
+        android:hint="Insert time to fade"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        />
+    <EditText
+        android:id="@+id/ttltimeInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="numberSigned"
+        android:hint="Insert number of sendings"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
