Splashactivity incorporated and minsdk passed from 21 to 19

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="white">#FFFFFF</color>
     <color name="whitePaper">#f9f9f4</color>
     <color name="lightGreen">#a8b400</color>
+    <color name="orange">#ff784e</color>
 </resources>
