--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimaryDark"
+        >
         <include
             android:id="@+id/tool_bar"
             layout="@layout/tool_bar"
@@ -27,8 +28,9 @@
         <!--Layout for the buttons-->
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1.5"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+
 
             android:background="@color/colorPrimaryDark">
             <ToggleButton
@@ -36,28 +38,43 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight=".50"
+                android:layout_weight="1"
                 android:textOff="Connect"
                 android:textOn="Disconnect"
                 android:textAlignment="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
             <Button
                 android:id="@+id/accidentButton"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".50"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/error"
                 android:layout_gravity="center_vertical"
                 android:text="Accident"
-                android:theme="@style/AppTheme.ButtonInform" />
+                android:theme="@style/AppTheme.ButtonInform"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+
+            <Button
+                android:id="@+id/speedButton"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/error"
+                android:layout_gravity="center_vertical"
+                android:text="Speed Limit"
+                android:theme="@style/AppTheme.ButtonSpeed"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+
+
         </LinearLayout>
 
         <!--Layout for the Map-->
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.5">
+            android:layout_height="0dp"
+            android:layout_weight="0.8">
             <fragment
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
